# dodo-engine

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  Refacto.md  vcpkg-configuration.json  vcpkg.json
DodoEngine/: CMakeLists.txt
DodoEngine/src/Core/: Application.cpp  Application.h
DodoEngine/src/DodoEngine/: DodoEngine.h
DodoEngine/src/DodoEngine/Core/: Application.cpp  Application.h  Camera.cpp  Camera.h  GameLayer.h  GlfwCallbacks.h  GraphicContext.h  InputManager.cpp  InputManager.h  Key.h  Types.h  Window.cpp  Window.h
DodoEngine/src/DodoEngine/Debug/: ImGuiLayer.cpp  ImGuiLayer.h  PerformanceManager.cpp  PerformanceManager.h
DodoEngine/src/DodoEngine/Editor/: Component.h  Console.cpp  Editor.h  EditorLayer.cpp  EditorLayer.h  ImGuiLayer.cpp  ImGuiLayer.h  ProfilerPanel.cpp  Scene.cpp  Scene.h  SceneObjectsPanel.cpp  ScenePanel.cpp
DodoEngine/src/DodoEngine/Editor/Component/: Component.h  ComponentControl.cpp
DodoEngine/src/DodoEngine/Editor/Panel/: Console.cpp  Inspector.cpp  Profiler.cpp  SceneObjects.cpp  ScenePanel.cpp
DodoEngine/src/DodoEngine/Platform/: VulkanContext.cpp  VulkanContext.h  VulkanInstance.cpp  VulkanInstance.h  VulkanPhysicalDevice.cpp  VulkanPhysicalDevice.h  VulkanSurface.cpp  VulkanSurface.h
DodoEngine/src/DodoEngine/Platform/Vulkan/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanContext.cpp  VulkanContext.h  VulkanDepthImage.cpp  VulkanDepthImage.h  VulkanDescriptorPool.cpp  VulkanDescriptorPool.h  VulkanDescriptorSet.cpp  VulkanDescriptorSet.h  VulkanDescriptorSetLayout.cpp  VulkanDescriptorSetLayout.h  VulkanDevice.cpp  VulkanDevice.h  VulkanFrameBuffer.cpp  VulkanFrameBuffer.h  VulkanGraphicPipeline.cpp  VulkanGraphicPipeline.h  VulkanImage.cpp  VulkanImage.h  VulkanInstance.cpp  VulkanInstance.h  VulkanPhysicalDevice.cpp  VulkanPhysicalDevice.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanSurface.cpp  VulkanSurface.h  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanTextureImage.cpp  VulkanTextureImage.h
DodoEngine/src/DodoEngine/Renderer/: Asset.h  AssetManager.cpp  AssetManager.h  Entity.h  FbxLoader.cpp  FbxLoader.h  GltfLoader.cpp  GltfLoader.h  Mesh.h  MeshTransform.h  Model.h  ModelLoader.h  ObjLoader.cpp  ObjLoader.h  Quad.h  Renderer.h  RendererPushConstants.h  RendererSpecializationData.h  ShaderManager.cpp  ShaderManager.h  Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h  UniformBufferObject.h  Vertex.h
DodoEngine/src/DodoEngine/Utils/: Log.h  ProfileTimer.h  Utils.h
DodoEngine/src/Utils/: Utils.h
SandboxApp/: CMakeLists.txt
SandboxApp/resources/: shader.vert
SandboxApp/resources/models/tree/: tree.gltf
SandboxApp/resources/shaders/: CompileShaders.bat  default.frag  default.frag.spv  default.vert  default.vert.spv  frag.spv  grid.frag  grid.vert  grid.vert.spv  shader.vert  vert.spv
SandboxApp/src/: main.cpp
